Added resource mapping emoji

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
-<resources>
-    <string name="app_name">Chinese Localization Sample</string>
-    <string name="description">Before Android 8.0, if System Language is Tradition Chinese, it should load the resources of "zh-TW".\nOn Android 8.0 and above, user could select multiple language profile in settings.\nIf a user has only "Cantonese (Traditional, Hong Kong) in the settings, it should load the resources of "yue-Hant-HK"</string>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <string name="app_name" translatable="false">Chinese Localization Sample</string>
+    <string name="description" translatable="false">Before Android 8.0, if System Language is Tradition Chinese, it should load the resources of "zh-TW".\nOn Android 8.0 and above, user could select multiple language profile in settings.\nIf a user has only "Cantonese (Traditional, Hong Kong) in the settings, it should load the resources of "yue-Hant-HK"</string>
+
+    <string name="emoji_country" tools:ignore="MissingTranslation">🌏</string>
+    <string name="emoji_hongkong" translatable="false">🇭🇰</string>
+    <string name="emoji_taiwan" translatable="false">🇹🇼</string>
 </resources>
